--- a/app/src/main/res/drawable/rec.xml
+++ b/app/src/main/res/drawable/rec.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:thickness="1dp">
-    <stroke android:color="@color/purple_700"
+    <stroke android:color="@color/teal_200"
         android:width="1dp"/>
     <corners android:radius="5dp"/>
 
