--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.LoginActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".Activity.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,50 +16,65 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="UPI QR"
+            android:textColor="@color/teal_700"
+            android:textSize="30dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Use your fingerprint to login"
+            android:textColor="@color/teal_200"
+            android:textSize="18sp" />
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginVertical="20dp"
+            android:src="@drawable/ic_baseline_fingerprint_24" />
+
+        <TextView
+            android:id="@+id/msgtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="18sp" />
+
+
+        <EditText
+            android:id="@+id/user_id_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusTopEnd="5dp"
-            app:boxCornerRadiusTopStart="5dp">
+            android:clickable="false"
+            android:drawableStart="@drawable/ic_baseline_person_pin_24"
+            android:drawablePadding="5dp"
+            android:focusable="false"
+            android:hint="User ID"
+            android:inputType="number"
+            android:padding="15dp"
+            android:textColor="@color/black" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/user_id_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="number"
-                android:hint="User ID"
-                android:textColor="@color/black"
-                android:textColorHint="@color/purple_700" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <EditText
+            android:id="@+id/password_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusTopEnd="5dp"
-            app:boxCornerRadiusTopStart="5dp"
-            app:passwordToggleEnabled="true">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:textColor="@color/black"
-                android:textColorHint="@color/purple_700" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
+            android:drawablePadding="5dp"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:padding="15dp"
+            android:textColor="@color/black" />
 
 
         <Button
@@ -78,7 +93,8 @@
             android:layout_gravity="end"
             android:gravity="end"
             android:text="New user? Register here!"
-            android:textColor="@color/purple_700" />
+            android:textColor="@color/purple_700"
+            android:layout_marginEnd="10dp"/>
 
     </LinearLayout>
 
