--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.RegisterActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".Activity.RegisterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,113 +16,97 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginVertical="20dp"
+            android:src="@drawable/ic_upi" />
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="UPI QR"
+            android:textColor="@color/teal_700"
+            android:textSize="30dp" />
+
+
+        <EditText
+            android:id="@+id/first_name_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusTopEnd="5dp"
-            app:boxCornerRadiusTopStart="5dp">
+            android:clickable="false"
+            android:drawableStart="@drawable/ic_name_id"
+            android:drawablePadding="5dp"
+            android:hint="First Name"
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/first_name_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="First Name"
-                android:textColor="@color/black"
-                android:textColorHint="@color/purple_700" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <EditText
+            android:id="@+id/last_name_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusTopEnd="5dp"
-            app:boxCornerRadiusTopStart="5dp">
+            android:clickable="false"
+            android:drawableStart="@drawable/ic_name_id"
+            android:drawablePadding="5dp"
+            android:hint="Last Name"
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/last_name_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="Last Name"
-                android:textColor="@color/black"
-                android:textColorHint="@color/purple_700" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <EditText
+            android:id="@+id/upi_id_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusTopEnd="5dp"
-            app:boxCornerRadiusTopStart="5dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/upi_id_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="Primary UPI Id"
-                android:textColor="@color/black"
-                android:textColorHint="@color/purple_700" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:clickable="false"
+            android:drawableStart="@drawable/ic_upi"
+            android:drawablePadding="5dp"
+            android:hint="Primary UPI Id"
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black" />
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <EditText
+            android:id="@+id/user_id_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
-            android:textColorHint="@color/black"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusTopEnd="5dp"
-            app:boxCornerRadiusTopStart="5dp">
+            android:clickable="false"
+            android:drawableStart="@drawable/ic_baseline_person_pin_24"
+            android:drawablePadding="5dp"
+            android:hint="User ID"
+            android:inputType="number"
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/user_id_text"
-                android:inputType="number"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="User ID"
-                android:textColor="@color/black"
-                android:textColorHint="@color/purple_700" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <EditText
+            android:id="@+id/password_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
+            android:clickable="false"
+            android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
+            android:drawablePadding="5dp"
+            android:hint="Password"
+            android:inputType="textPassword"
             android:textColorHint="@color/black"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusTopEnd="5dp"
-            app:boxCornerRadiusTopStart="5dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:textColor="@color/black"
-                android:textColorHint="@color/purple_700" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:padding="15dp"
+            android:textColor="@color/black" />
 
 
         <Button
@@ -141,7 +125,8 @@
             android:layout_gravity="end"
             android:gravity="end"
             android:text="Already a user? login here!"
-            android:textColor="@color/purple_700" />
+            android:textColor="@color/purple_700"
+            android:layout_marginEnd="10dp"/>
 
     </LinearLayout>
 
