--- a/app/src/main/res/drawable-v24/btn.xml
+++ b/app/src/main/res/drawable-v24/btn.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:thickness="1dp">
+    android:shape="rectangle"
+    android:thickness="1dp">
     <stroke
         android:color="@color/primaryColor"
         android:width="1dp" />
-    <corners android:radius="5dp"/>
+    <corners android:radius="50dp" />
     <solid android:color="@color/secondaryColorTrans" />
 
 </shape>
