--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/secondaryColor"
     tools:context=".Activity.RegisterActivity">
 
     <LinearLayout
@@ -16,33 +16,52 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:layout_marginVertical="20dp"
-            android:src="@drawable/ic_upi" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="UPI QR"
-            android:textColor="@color/teal_700"
-            android:textSize="30dp" />
-
-
-        <EditText
-            android:id="@+id/first_name_text"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:background="@drawable/rec"
-            android:clickable="false"
-            android:drawableStart="@drawable/ic_name_id"
-            android:drawablePadding="5dp"
-            android:hint="First Name"
-            android:padding="15dp"
+            android:layout_height="0dp"
+            android:layout_weight="2">
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="20dp"
+                android:src="@drawable/ic_subscriber" />
+
+        </LinearLayout>
+
+        <com.sinaseyfi.advancedcardview.AdvancedCardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            app:cardBackgroundColor="@color/white"
+            app:cornerRadius_TopLeft="40dp"
+            app:cornerRadius_TopRight="40dp"
+            app:cardElevation="10dp"
+            app:corner_Type="rectangular">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:gravity="center">
+
+
+                <EditText
+                    android:id="@+id/first_name_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/rec"
+                    android:clickable="false"
+                    android:drawableStart="@drawable/ic_undraw_name"
+                    android:drawablePadding="5dp"
+                    android:hint="Full Name"
+                    android:padding="15dp"
             android:textColor="@color/black"
             android:textColorHint="@color/black"/>
 
@@ -50,13 +69,13 @@
         <EditText
             android:id="@+id/merchant_name_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
             android:clickable="false"
-            android:drawableStart="@drawable/ic_baseline_business_24"
+            android:drawableStart="@drawable/ic_undraw_business"
             android:drawablePadding="5dp"
-            android:hint="Merchant Name"
+            android:hint="Business Name"
             android:padding="15dp"
             android:textColor="@color/black"
             android:textColorHint="@color/black" />
@@ -65,7 +84,7 @@
         <EditText
             android:id="@+id/upi_id_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
             android:clickable="false"
@@ -80,11 +99,11 @@
         <EditText
             android:id="@+id/user_id_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
             android:clickable="false"
-            android:drawableStart="@drawable/ic_baseline_person_pin_24"
+            android:drawableStart="@drawable/ic_id"
             android:drawablePadding="5dp"
             android:hint="User ID"
             android:inputType="number"
@@ -96,11 +115,11 @@
         <EditText
             android:id="@+id/password_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/rec"
             android:clickable="false"
-            android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
+            android:drawableStart="@drawable/ic_my_password"
             android:drawablePadding="5dp"
             android:hint="Password"
             android:inputType="textPassword"
@@ -111,22 +130,27 @@
 
         <Button
             android:id="@+id/register_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/btn"
             android:layout_margin="5dp"
             android:text="Register"
             android:textColor="@color/white" />
 
-        <TextView
-            android:id="@+id/log_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:gravity="end"
-            android:text="Already a user? login here!"
-            android:textColor="@color/purple_700"
-            android:layout_marginEnd="10dp"/>
+                <TextView
+                    android:id="@+id/log_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:gravity="end"
+                    android:text="Already a user? login here!"
+                    android:textColor="@color/primaryColor"
+                    android:layout_marginEnd="10dp" />
+
+            </LinearLayout>
+
+        </com.sinaseyfi.advancedcardview.AdvancedCardView>
 
     </LinearLayout>
 
