--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryColor">#EF7C8E</color>
+    <color name="primaryDarkColor">#D8A7B1</color>
+    <color name="secondaryColor">#FAE8E0</color>
+    <color name="secondaryColorTrans">#99FAE8E0</color>
+    <color name="transparentColor">#00000000</color>
 </resources>
